# Task-Manager

./: README.md  app.py  config.py  forms.py  models.py  pyproject.toml
templates/: base.html  index.html  landing.html
templates/auth/: login.html  register.html
templates/tasks/: daily.html  monthly.html  task_form.html  weekly.html
